<resources>
    <string name="app_name">Gestor de Tareas FRM</string>
    <string name="tareas">Tareas</string>
    <string name="confirmacion_borrado_aceptar">Aceptar</string>
    <string name="tareas_borrado_exito_mensaje">Registro de Tareas borrado con éxito</string>
    <string name="confirmacion_borrado_mensaje">¿Deseas borrar todas las tareas? La operación es irreversible</string>
    <string name="confirmacion_borrado_title">Confirmación</string>
    <string name="confirmacion_borrado_cancelar">Cancelar</string>
    <string name="anyadir_tarea">Añadir tarea</string>
    <string name="borrar_tareas">Borrar tareas</string>
    <string name="a_completar">A completar</string>
    <string name="completadas">Completadas</string>
    <string name="prioridades">Prioridades</string>
    <string name="tareas_menu">Tareas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preferencias">Preferencias</string>
    <string name="modo_nocturno">modo nocturno</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="logo_gestor_de_tareas">Logo Gestor de Tareas</string>
    <string name="descripci_n_de_la_tarea_hint">Descripción de la tarea</string>
    <string name="prioridad_de_la_tarea">Prioridad de la tarea</string>
    <string name="guardar">Guardar</string>
    <string name="id">ID</string>
    <string name="prioridad">Prioridad</string>
    <string name="id2">ID</string>
    <string name="descripci_n">Descripción</string>
    <string name="fecha">Fecha</string>
    <string name="prioridad2">Prioridad</string>
    <string name="completada2">Completada</string>
    <string name="icono_de_completado">Icono de Completado</string>
</resources>