<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".views.AddTareaFragment">

    <!-- Añadido un espacio entre layoutTareaDescripcion y textView5 -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutTareaDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutPrioridad"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TareaDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripci_n_de_la_tarea_hint"
            android:imeOptions="actionNext" />
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="8dp"
        app:layout_constraintTop_toBottomOf="@id/layoutTareaDescripcion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- TextView agregado encima del TextInputLayout del Spinner -->

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/prioridad_de_la_tarea"
        app:layout_constraintEnd_toEndOf="@id/layoutTareaDescripcion"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="@id/layoutTareaDescripcion"
        app:layout_constraintTop_toBottomOf="@id/space" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPrioridad"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeWidth="2dp"
        app:layout_constraintTop_toBottomOf="@id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Spinner
            android:id="@+id/spinnerCategoria"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="24dp"
            android:paddingTop="16dp"
            android:paddingEnd="8dp"
            android:paddingBottom="16dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnGuardarTarea"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutPrioridad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        style="@style/Widget.Material3.FloatingActionButton.Large.Tertiary"/>

</androidx.constraintlayout.widget.ConstraintLayout>

